--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
+<!DOCTYPE html>
+<html lang="lv">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Mana Tīmekļa Vietne</title>
+<style>
+/* Pamata stils */
+body {
+font-family: Arial, sans-serif;
+margin: 0;
+padding: 0;
+display: flex;
+flex-direction: column;
+min-height: 100vh;
+}
 
+header {
+background-color: #4CAF50;
+padding: 10px;
+color: white;
+text-align: center;
+}
+
+nav ul {
+list-style-type: none;
+margin: 0;
+padding: 0;
+}
+
+nav ul li {
+display: inline;
+margin-right: 20px;
+}
+
+nav ul li a {
+color: white;
+text-decoration: none;
+font-weight: bold;
+}
+
+main {
+display: flex;
+flex: 1;
+padding: 20px;
+}
+
+section {
+flex: 3;
+padding-right: 20px;
+}
+
+aside {
+flex: 1;
+background-color: #f4f4f4;
+padding: 10px;
+border-left: 1px solid #ddd;
+}
+
+footer {
+background-color: #333;
+color: white;
+text-align: center;
+padding: 10px;
+position: relative;
+bottom: 0;
+width: 100%;
+}
+
+footer a {
+color: white;
+text-decoration: none;
+}
+</style>
+</head>
+<body>
+
+<!-- Galvene ar navigāciju -->
+<header>
+<h1>Mana Tīmekļa Vietne</h1>
+<nav>
+<ul>
+<li><a href="#">Home</a></li>
+<li><a href="#">About</a></li>
+<li><a href="#">Contact</a></li>
+</ul>
+</nav>
+</header>
+
+<!-- Galvenais saturs un sānu josla -->
+<main>
+<section>
+<h1>Laipni lūdzam!</h1>
+<h2>Mana pirmā tīmekļa lapa</h2>
+<p>Šī ir vienkārša HTML tīmekļa vietne, kurā ir galvene, galvenā sadaļa, sānu josla un kājene. Šeit jūs varat ievietot dažādus elementus, piemēram, tekstus, attēlus un saites.</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRa_Z4jRBsvQU0QoTaIwYRz9fQbmNg85SSimw&s" alt="Piemērs attēls">
+</section>
+
+<!-- Sānu josla -->
+<aside>
+<h2>Saistītie raksti</h2>
+<ul>
+<li><a href="#">Raksts 1</a></li>
+<li><a href="#">Raksts 2</a></li>
+<li><a href="#">Raksts 3</a></li>
+</ul>
+</aside>
+</main>
+
+<!-- Kājene -->
+<footer>
+<p>&copy; 2024 Mana Tīmekļa Vietne | <a href="#">Facebook</a> | <a href="#">Twitter</a></p>
+</footer>
+
+</body>
+</html>
