--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@ font-weight: bold;
 
 <div class="product-list">
 <h3>Samsung Galaxy S23</h3>
-<img src="https://via.placeholder.com/300x200" alt="Samsung Galaxy S23">
-<p>Cena: 799€</p>
+<img src="https://capital.lv/media/catalog/product/cache/3c61ca57fadb97b310925f300e186d09/2/a/2ad96343-d3cf-470b-bb16-f2fc0ce2e149.jpg" alt="Apple Iphone 15 pro">
+<p>Cena: 1129€</p>
 <p>Moderns viedtālrunis ar augstas kvalitātes kameru un jaudīgu procesoru.</p>
 
 <h3>Dell Inspiron 15</h3>
