Karte_ar_hover_efektiem.html

--- a/sandbox.html/Karte_ar_hover_efektiem.html
+++ b/sandbox.html/Karte_ar_hover_efektiem.html
@@ -10,19 +10,19 @@
 <div class="card-container">
 <div class="card">
 <img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grD8OajS_duTTPpm9I-tKpseuQsETCNQZWoC7GlUCCeSOQ4JcCEpzMDGASZF4_iGgC8ZkcmBkYWCuAjEgGEODjKy3KKUgsSszVK89MKckQ1DAgEgizu7iGOHr6BAMAn4s5XOkAAAA?wid=850" alt="Produkts 1">
-<h2>Produkts 1</h2>
+<h2>Audi E-Tron</h2>
 <p>Īss produkta apraksts.</p>
 <button>Pievienot grozam</button>
 </div>
 <div class="card">
-<img src="" alt="Produkts 2">
-<h2>Produkts 2</h2>
+<img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grT2ddr37QpqLUVT3Xey5MkPIsv2wZwsAK1MXoASSYngEJvl1AgtObAUyCzJsLIuxAfCYrZgYG1gogI5IBBPj4SotyChKLEnP1yjNTSjIENQyIBMLsLq4hjp4-wQBAHJaY6QAAAA?wid=850" alt="Produkts 2">
+<h2>Audi Q5</h2>
 <p>Īss produkta apraksts.</p>
 <button>Pievienot grozam</button>
 </div>
 <div class="card">
-<img src="" alt="Produkts 3">
-<h2>Produkts 3</h2>
+<img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grTxNXu7uebK4Wa8-m020r5pvtvP7wIwMrUBfjIiDBzAYk-MKBBKcnA5gEmXcARASA-Ey2zAwMrBVARiQDCPDxlRblFCQWJebqlWemlGQIahgQCYTZXVxDHD19ggFVylB_6QAAAA?wid=850" alt="Produkts 3">
+<h2>Audi Q5 E-Tron</h2>
 <p>Īss produkta apraksts.</p>
 <button>Pievienot grozam</button>
 </div>
