--- a/sandbox.html/Karte_ar_hover_efektiem.html
+++ b/sandbox.html/Karte_ar_hover_efektiem.html
@@ -3,8 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Stilizētas Kartītes ar Hover Efektiem</title>
+<title>Stilizētas Kartītes ar Navigāciju</title>
 <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<!-- Navigācijas josla -->
+<nav class="navbar">
+<ul>
+<li><a href="#">Sākums</a></li>
+<li><a href="#">Produkti</a></li>
+<li><a href="#">Par mums</a></li>
+<li><a href="#">Kontakti</a></li>
+</ul>
+</nav>
 </head>
 <body>
 <div class="card-container">
