Karte_ar_hover_efektiem.html

--- a/sandbox.html/Karte_ar_hover_efektiem.html
+++ b/sandbox.html/Karte_ar_hover_efektiem.html
@@ -16,9 +16,15 @@
 <li><a href="#">Kontakti</a></li>
 </ul>
 </nav>
-</head>
-<body>
-<div class="card-container">
+
+<!-- Galvenais virsraksts -->
+<header class="header">
+<h1>Laipni lūdzam mūsu produktu lapā</h1>
+<p>Aplūkojiet mūsu piedāvājumus un izvēlieties labāko produktu!</p>
+</header>
+
+<!-- Kartīšu izkārtojums -->
+<section class="card-container">
 <div class="card">
 <img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grD8OajS_duTTPpm9I-tKpseuQsETCNQZWoC7GlUCCeSOQ4JcCEpzMDGASZF4_iGgC8ZkcmBkYWCuAjEgGEODjKy3KKUgsSszVK89MKckQ1DAgEgizu7iGOHr6BAMAn4s5XOkAAAA?wid=850" alt="Produkts 1">
 <h2>Audi E-Tron</h2>
@@ -37,6 +43,28 @@
 <p>Īss produkta apraksts.</p>
 <button>Pievienot grozam</button>
 </div>
+</section>
+
+<!-- Otrā kartīšu rinda -->
+<section class="card-container">
+<div class="card">
+<img src="https://mediaservice.audi.com/media/live/50900/fly1400x601n1/4a2c2y/2024.png?wid=850" alt="Produkts 4">
+<h2>Audi A4</h2>
+<p>Īss produkta apraksts.</p>
+<button>Pievienot grozam</button>
 </div>
+<div class="card">
+<img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grT0fNWy4HQ5dNLLKTN7H3Vxm-E19VwsAK1MV4A0gwTwMSfAVAglOaAUyCzDsAIppAfCZ7ZgYG1gogI5IBBPj4SotyChKLEnP1yjNTSjIENQyIBMLsLq4hjp4-wQBR-vwh6QAAAA?wid=850" alt="Produkts 5">
+<h2>Audi A3</h2>
+<p>Īss produkta apraksts.</p>
+<button>Pievienot grozam</button>
+</div>
+<div class="card">
+<img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grz8q__3Y7CSyt-BjwUyQp_kno-cbfQQysQF2M2kCCuQZI8L0FEpy8DGASZF4fiKgB8ZksmRkYWCuAjEgGEODjKy3KKUgsSszVK89MKckQ1DAgEgizu7iGOHr6BAMAN3NPLOkAAAA?wid=850" alt="Produkts 6">
+<h2>Audi A7</h2>
+<p>Īss produkta apraksts.</p>
+<button>Pievienot grozam</button>
+</div>
+</section>
 </body>
 </html>
