Karte_ar_hover_efektiem.html

--- a/sandbox.html/Karte_ar_hover_efektiem.html
+++ b/sandbox.html/Karte_ar_hover_efektiem.html
@@ -19,8 +19,8 @@
 
 <!-- Galvenais virsraksts -->
 <header class="header">
-<h1>Laipni lūdzam mūsu produktu lapā</h1>
-<p>Aplūkojiet mūsu piedāvājumus un izvēlieties labāko produktu!</p>
+<h1>Laipni lūdzam manā mašīnas lapā</h1>
+<p>Aplūkojiet manus piedāvājumus un izvēlieties sev tīkamāko mašīnu!</p>
 </header>
 
 <!-- Kartīšu izkārtojums -->
