--- a/sandbox.html/Karte_ar_hover_efektiem.html
+++ b/sandbox.html/Karte_ar_hover_efektiem.html
@@ -22,7 +22,9 @@
             <ul class="dropdown-content">
                 <li><a href="#">Audi E-Tron</a></li>
                 <li><a href="#">Audi Q5</a></li>
+                <li><a href="#">Audi Q5 E-Tron</a></li>
                 <li><a href="#">Audi A4</a></li>
+                <li><a href="#">Audi A3</a></li>
                 <li><a href="#">Audi A7</a></li>
             </ul>
         </li>
@@ -95,9 +97,14 @@
         <span class="close" onclick="closeModal()">&times;</span>
         <h2></h2>
         <p></p>
+        <button onclick="closeModal()" class="learn-more"></button>
     </div>
 </div>
 
+<footer class="footer"> All socials: @AudiLatvia</footer>
+
 <script src="skripts.js"></script>
+
+
 </body>
 </html>
