--- a/sandbox.html/Karte_ar_hover_efektiem.html
+++ b/sandbox.html/Karte_ar_hover_efektiem.html
@@ -38,6 +38,7 @@
         </li>
         <li><a href="#">Par mums</a></li>
         <li><a href="#">Kontakti</a></li>
+        <input type="text" placeholder="Meklēt...">
     </ul>
     <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
 </nav>
