--- a/sandbox.html/Karte_ar_hover_efektiem.html
+++ b/sandbox.html/Karte_ar_hover_efektiem.html
@@ -16,16 +16,16 @@
 <!-- Navigācijas josla -->
 <nav class="navbar">
     <ul class="menu">
-        <li><a href="#">Sākums</a></li>
+        <li><a href="Karte_ar_hover_efektiem.html">Sākums</a></li> <!-- Link to the main page -->
         <li class="dropdown">
             <a href="#">Produkti</a>
             <ul class="dropdown-content">
-                <li><a href="#">Audi E-Tron</a></li>
-                <li><a href="#">Audi Q5</a></li>
-                <li><a href="#">Audi Q5 E-Tron</a></li>
-                <li><a href="#">Audi A4</a></li>
-                <li><a href="#">Audi A3</a></li>
-                <li><a href="#">Audi A7</a></li>
+                <li><a href="audi-e-tron.html">Audi E-Tron</a></li>
+                <li><a href="audi-q5.html">Audi Q5</a></li>
+                <li><a href="audi-q5-e-tron.html">Audi Q5 E-Tron</a></li>
+                <li><a href="audi-a4.html">Audi A4</a></li>
+                <li><a href="audi-a3.html">Audi A3</a></li>
+                <li><a href="audi-a7.html">Audi A7</a></li>
             </ul>
         </li>
         <li class="dropdown">
@@ -38,7 +38,7 @@
         </li>
         <li><a href="#">Par mums</a></li>
         <li><a href="#">Kontakti</a></li>
-        <li onclick="darkMode()"><a href=" #">Dark Mode</a></li>
+        <li onclick="darkMode()"><a href="#">Dark Mode</a></li>
         <input type="text" placeholder="Meklēt...">
     </ul>
     <div class="hamburger" onclick="toggleMenu()">&#9776;</div>
@@ -86,11 +86,42 @@
         <button class="learn-more" onclick="openModal('Audi A3', 'Šis ir Audi A3, kompakts luksusa auto.')">Pievienot grozam</button>
     </div>
     <div class="card">
-        <img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grz8q__3Y7CSyt-BjwUyQp_kno-cbfQQysQF2M2kCCuQZI8L0FEpy8DGASZF4fiKgB8ZksmRkYWCuAjEgGEODjKy3KKUgsSszVK89MKckQ1DAgEgizu7iGOHr6BAMAN3NPLOkAAAA?wid=850" alt="Audi A6">
+        <img src="https://mediaservice.audi.com/media/fast/H4sIAAAAAAAAAFvzloG1tIiBOTrayfuvpGh6-m1zJgaGigIGBgZGoDhTtNOaz-I_2DhCHsCEtzEwF-SlMwJZKUycmbmJ6an6QD4_I3taTmV-aUkxO0grz8q__3Y7CSyt-BjwUyQp_kno-cbfQQysQF2M2kCCuQZI8L0FEpy8DGASZF4fiKgB8ZksmRkYWCuAjEgGEODjKy3KKUgsSszVK89MKckQ1DAgEgizu7iGOHr6BAMAN3NPLOkAAAA?wid=850" alt="Audi A7">
         <h2>Audi A7</h2>
         <p>Īss produkta apraksts.</p>
         <button class="learn-more" onclick="openModal('Audi A7', 'Šis ir Audi A7, vidēja izmēra luksusa auto.')">Pievienot grozam</button>
     </div>
+</section>
+
+<!-- Produkta detalizācijas sadaļas -->
+<section id="audi-e-tron">
+    <h2>Audi E-Tron</h2>
+    <p>Detalizēts apraksts par Audi E-Tron.</p>
+</section>
+
+<section id="audi-q5">
+    <h2>Audi Q5</h2>
+    <p>Detalizēts apraksts par Audi Q5.</p>
+</section>
+
+<section id="audi-q5-e-tron">
+    <h2>Audi Q5 E-Tron</h2>
+    <p>Detalizēts apraksts par Audi Q5 E-Tron.</p>
+</section>
+
+<section id="audi-a4">
+    <h2>Audi A4</h2>
+    <p>Detalizēts apraksts par Audi A4.</p>
+</section>
+
+<section id="audi-a3">
+    <h2>Audi A3</h2>
+    <p>Detalizēts apraksts par Audi A3.</p>
+</section>
+
+<section id="audi-a7">
+    <h2>Audi A7</h2>
+    <p>Detalizēts apraksts par Audi A7.</p>
 </section>
 
 <!-- Modālais logs -->
@@ -99,14 +130,13 @@
         <span class="close" onclick="closeModal()">&times;</span>
         <h2></h2>
         <p></p>
-        <button onclick="closeModal()" class="learn-more"></button>
+        <button onclick="closeModal()" class="learn-more">Aizvērt</button>
     </div>
 </div>
 
-<footer class="footer"> All socials: @AudiLatvia</footer>
+<footer class="footer">All socials: @AudiLatvia</footer>
 
 <script src="skripts.js"></script>
-
 
 </body>
 </html>
