--- a/LeafLetMap-main/LeafLetMap-main/index.html
+++ b/LeafLetMap-main/LeafLetMap-main/index.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Iestatījumi un metadati -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The map</title>
 
+    <!-- Pievieno Leaflet CSS, kas ir nepieciešams kartes attēlošanai -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
 
+    <!-- Pievieno Leaflet JS bibliotēku -->
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
 
+    <!-- Pievieno ārējo CSS failu (styles.css) -->
     <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
-    <div 
-        id="map">
+    <!-- Izveido vietu kartes attēlošanai -->
+    <div id="map">
     </div>
     
 </body>
+    <!-- Pievieno proj4js bibliotēku, kas ļauj strādāt ar dažādiem koordinātu sistēmām -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.7.5/proj4.js"></script>
+
+    <!-- Pievieno savu JavaScript failu (index.js) -->
     <script src="index.js"></script>
+
+    <!-- Definē jaunu koordinātu sistēmu (EPSG:3059) -->
     <script>
-        proj4.defs("EPSG:3059","+proj=tmerc +lat_0=0 +lon_0=24 +k=0.9996 +x_0=500000 +y_0=-6000000 +ellps=GRS80 +units=m +no_defs");
+        proj4.defs("EPSG:3059", "+proj=tmerc +lat_0=0 +lon_0=24 +k=0.9996 +x_0=500000 +y_0=-6000000 +ellps=GRS80 +units=m +no_defs");
     </script>
 </html>
